detecting and sending the detected photo from the user, saving it in the project files. 3-st commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 help/config_token.py
 help/__pycache__/config_token.cpython-313.pyc
+/.venv
+*.pyc
+__pycache__/
+db.sqlite3
+db.sqlite3-journal
+*.json
+*.jpg
